自己紹介カード編集

--- a/introductionCard/index.html
+++ b/introductionCard/index.html
@@ -2,6 +2,14 @@
 <h1 id="firstHeading" class="firstHeading mw-first-heading">APEX 自己紹介カード</h1>
 
 <html>
+<a href="./ahiru.jpg">ahiru</a></br></br>
+<a href="./inazuma-zipang.jpg">inazuma-zipang</a></br></br>
+<a href="./miu_turn.jpg">miu_turn</a></br></br>
+<a href="./OkmletEvergarden.jpg">OkmletEvergarden</a></br></br>
+<a href="./Sinonkun.jpg">Sinonkun</a></br></br>
+<a href="./Tigermask.jpg">Tigermask</a></br></br>
+<a href="./アリゼー.jpg">アリゼー</a></br></br>
+<a href="./うるぱんち.jpg">うるぱんち</a></br></br>
+<a href="./おくみ.jpg">おくみ</a></br></br>
 <a href="./鉄砲パキュンパキュン.jpg">鉄砲パキュンパキュン</a></br></br>
-
 </html>
