自己紹介カード編集

--- a/introductionCard/index.html
+++ b/introductionCard/index.html
@@ -1,15 +1,54 @@
-<title>APEX 自己紹介カード</title>
-<h1 id="firstHeading" class="firstHeading mw-first-heading">APEX 自己紹介カード</h1>
-
 <html>
-<a href="./ahiru.jpg">ahiru</a></br></br>
-<a href="./inazuma-zipang.jpg">inazuma-zipang</a></br></br>
-<a href="./miu_turn.jpg">miu_turn</a></br></br>
-<a href="./OkmletEvergarden.jpg">OkmletEvergarden</a></br></br>
-<a href="./Sinonkun.jpg">Sinonkun</a></br></br>
-<a href="./Tigermask.jpg">Tigermask</a></br></br>
-<a href="./アリゼー.jpg">アリゼー</a></br></br>
-<a href="./うるぱんち.jpg">うるぱんち</a></br></br>
-<a href="./おくみ.jpg">おくみ</a></br></br>
-<a href="./鉄砲パキュンパキュン.jpg">鉄砲パキュンパキュン</a></br></br>
+<head>
+	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>APEX CUSTOM</title>
+</head>
+<h1 id="firstHeading" class="firstHeading mw-first-heading">APEX CUSTOM</h1>
+
+<body>
+<table style="border:none;" cellSpacing="10">
+  <tbody style="border:none;">
+    <tr style="border:none;">
+      <td style="border:none;"><a href="./taiwan/ahiru.jpg">ahiru</a></td>
+      <td style="border:none;"><a href="./taiwan/inazuma-zipang.jpg">inazuma-zipang</a></td>
+    </tr>
+    <tr style="border:none;">
+      <td style="border:none;"><a href="./taiwan/miu_turn.jpg">miu_turn</a></td>
+      <td style="border:none;"><a href="./taiwan/OkmletEvergarden.jpg">OkmletEvergarden</a></td>
+    </tr>
+    <tr style="border:none;">
+      <td style="border:none;"><a href="./taiwan/Sinonkun.jpg">Sinonkun</a></td>
+      <td style="border:none;"><a href="./taiwan/Tigermask.jpg">Tigermask</a></td>
+    </tr>
+    <tr style="border:none;">
+      <td style="border:none;"><a href="./taiwan/アリゼー.jpg">アリゼー</a></td>
+      <td style="border:none;"><a href="./taiwan/うるぱんち.jpg">うるぱんち</a></td>
+    </tr>
+    <tr style="border:none;">
+      <td style="border:none;"><a href="./taiwan/おくみ.jpg">おくみ</a></td>
+      <td style="border:none;"><a href="./taiwan/鉄砲パキュンパキュン.jpg">てっぽーパキュンパキュン</a></td>
+    </tr>
+    <tr style="border:none;">
+      <td style="border:none;"><a href="./makofriend/poteto_apple.jpg">poteto_apple</a></td>
+      <td style="border:none;"><a href="./makofriend/キムラ.jpg">キムラ</a></td>
+    </tr>
+    <tr style="border:none;">
+      <td style="border:none;"><a href="./makofriend/さくさくパンダ.jpg">さくさくパンダ</a></td>
+      <td style="border:none;"><a href="./makofriend/すずき.jpg">すずき</a></td>
+    </tr>
+    </tr>
+    <tr style="border:none;">
+      <td style="border:none;"><a href="./makofriend/タナカ.jpg">タナカ</a></td>
+      <td style="border:none;"><a href="./makofriend/ぽわそん.jpg">ぽわそん</a></td>
+    </tr>
+    </tr>
+    <tr style="border:none;">
+      <td style="border:none;"><a href="./makofriend/はやと.jpg">はやと</a></td>
+    </tr>
+    </tr>
+  </tbody>
+</table>
+</body>
 </html>
