自己紹介カード編集

--- a/introductionCard/index.html
+++ b/introductionCard/index.html
@@ -16,7 +16,7 @@
     </tr>
     <tr style="border:none;">
       <td style="border:none;"><a href="./taiwan/miu_turn.jpg">miu_turn</a></td>
-      <td style="border:none;"><a href="./taiwan/OkmletEvergarden.jpg">OkmletEvergarden</a></td>
+      <td style="border:none;"><a href="./taiwan/OkmletEvergarden.png">OkmletEvergarden</a></td>
     </tr>
     <tr style="border:none;">
       <td style="border:none;"><a href="./taiwan/Sinonkun.jpg">Sinonkun</a></td>
