自己紹介カード編集

--- a/introductionCard/index.html
+++ b/introductionCard/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>APEX CUSTOM</title>
 </head>
-<h1 id="firstHeading" class="firstHeading mw-first-heading">APEX CUSTOM</h1>
+<h1 id="firstHeading" class="firstHeading mw-first-heading">APEX CUSTOM 2023/2/4<br></h1>
 
 <body>
 <table style="border:none;" cellSpacing="10">
@@ -31,7 +31,7 @@
       <td style="border:none;"><a href="./taiwan/鉄砲パキュンパキュン.jpg">てっぽーパキュンパキュン</a></td>
     </tr>
     <tr style="border:none;">
-      <td style="border:none;"><a href="./makofriend/poteto_apple.jpg">poteto_apple</a></td>
+      <td style="border:none;"><a href="./makofriend/ひびき.jpg">ひびき</a></td>
       <td style="border:none;"><a href="./makofriend/キムラ.jpg">キムラ</a></td>
     </tr>
     <tr style="border:none;">
@@ -46,9 +46,18 @@
     </tr>
     <tr style="border:none;">
       <td style="border:none;"><a href="./makofriend/はやと.jpg">はやと</a></td>
+      <td style="border:none;"><a href="./makofriend/MINTIA.jpg">MINTIA</a></td>
     </tr>
+    <tr style="border:none;">
+      <td style="border:none;"><a href="./makofriend/Ryuuji.jpg">Ryuuji</a></td>
+      <td style="border:none;"><a href="./makofriend/あんこ.jpg">あんこ</a></td>
+    </tr>
+    <tr style="border:none;">
+      <td style="border:none;"><a href="./makofriend/カズマ.jpg">カズマ</a></td>
+      <td style="border:none;"><a href="./makofriend/なる.jpg">なる</a></td>
     </tr>
   </tbody>
 </table>
+
 </body>
 </html>
