自己紹介カード編集

--- a/introductionCard/index.html
+++ b/introductionCard/index.html
@@ -8,53 +8,106 @@
 <h1 id="firstHeading" class="firstHeading mw-first-heading">APEX CUSTOM 2023/2/4<br></h1>
 
 <body>
-<table style="border:none;" cellSpacing="10">
-  <tbody style="border:none;">
-    <tr style="border:none;">
-      <td style="border:none;"><a href="./taiwan/ahiru.jpg">ahiru</a></td>
-      <td style="border:none;"><a href="./taiwan/inazuma-zipang.jpg">inazuma-zipang</a></td>
+<table rules="all" cellSpacing="10">
+  <tbody>
+    <tr>
+      <td>ちゅよちゅよＡ</td>
+      <td><a href="./taiwan/アリゼー.jpg">アリゼー</a></td>
+      <td><a href="./taiwan/おくみ.jpg">おくみ</a></td>
+      <td><a href="./taiwan/Sinonkun.jpg">Sinonkun</a></td>
+      <td>ランドスライド</td>
     </tr>
-    <tr style="border:none;">
-      <td style="border:none;"><a href="./taiwan/miu_turn.jpg">miu_turn</a></td>
-      <td style="border:none;"><a href="./taiwan/OkmletEvergarden.png">OkmletEvergarden</a></td>
+    <tr>
+      <td>ちゅよちゅよＢ</td>
+      <td><a href="./taiwan/miu_turn.jpg">miu_turn</a></td>
+      <td><a href="./taiwan/ahiru.jpg">ahiru</a></td>
+      <td><a href="./taiwan/Tigermask.jpg">Tigermask</a></td>
+      <td>ツリー</td>
     </tr>
-    <tr style="border:none;">
-      <td style="border:none;"><a href="./taiwan/Sinonkun.jpg">Sinonkun</a></td>
-      <td style="border:none;"><a href="./taiwan/Tigermask.jpg">Tigermask</a></td>
+    <tr>
+      <td>ちゅよちゅよＣ</td>
+      <td><a href="./taiwan/鉄砲パキュンパキュン.jpg">てっぽーパキュンパキュン</a></td>
+      <td><a href="./taiwan/OkmletEvergarden.png">OkmletEvergarden</a></td>
+      <td>-</td>
+      <td>ＸＸＸ</td>
     </tr>
-    <tr style="border:none;">
-      <td style="border:none;"><a href="./taiwan/アリゼー.jpg">アリゼー</a></td>
-      <td style="border:none;"><a href="./taiwan/うるぱんち.jpg">うるぱんち</a></td>
+    <tr>
+      <td>チームポワソン</td>
+      <td><a href="./makofriend/ぽわそん.jpg">ぽわそん</a></td>
+      <td><a href="./makofriend/はやと.jpg">はやと</a></td>
+      <td><a href="./makofriend/ひびき.jpg">ひびき</a></td>
+      <td>ＸＸＸ</td>
     </tr>
-    <tr style="border:none;">
-      <td style="border:none;"><a href="./taiwan/おくみ.jpg">おくみ</a></td>
-      <td style="border:none;"><a href="./taiwan/鉄砲パキュンパキュン.jpg">てっぽーパキュンパキュン</a></td>
+    <tr>
+      <td>チームサクサク</td>
+      <td><a href="./makofriend/さくさくパンダ.jpg">さくさくパンダ</a></td>
+      <td><a href="./makofriend/すずき.jpg">すずき</a></td>
+      <td><a href="./makofriend/キムラ.jpg">キムラ</a></td>
+      <td>ＸＸＸ</td>
     </tr>
-    <tr style="border:none;">
-      <td style="border:none;"><a href="./makofriend/ひびき.jpg">ひびき</a></td>
-      <td style="border:none;"><a href="./makofriend/キムラ.jpg">キムラ</a></td>
+    <tr>
+      <td>チームあんこ</td>
+      <td><a href="./makofriend/あんこ.jpg">あんこ</a></td>
+      <td><a href="./makofriend/なる.jpg">なる</a></td>
+      <td><a href="./makofriend/Ryuuji.jpg">Ryuuji</a></td>
+      <td>ＸＸＸ</td>
     </tr>
-    <tr style="border:none;">
-      <td style="border:none;"><a href="./makofriend/さくさくパンダ.jpg">さくさくパンダ</a></td>
-      <td style="border:none;"><a href="./makofriend/すずき.jpg">すずき</a></td>
+    <tr>
+      <td>チームイナズマ</td>
+      <td><a href="./taiwan/inazuma-zipang.jpg">inazuma-zipang</a></td>
+      <td><a href="./makofriend/タナカ.jpg">タナカ</a></td>
+      <td><a href="./makofriend/カズマ.jpg">カズマ</a></td>
+      <td>ＸＸＸ</td>
     </tr>
     </tr>
-    <tr style="border:none;">
-      <td style="border:none;"><a href="./makofriend/タナカ.jpg">タナカ</a></td>
-      <td style="border:none;"><a href="./makofriend/ぽわそん.jpg">ぽわそん</a></td>
+    <tr>
+      <td>郵遊白書</td>
+      <td><a href="./makofriend/MINTIA.jpg">MINTIA</a></td>
+      <td>ＸＸＸ</td>
+      <td>ＸＸＸ</td>
+      <td>ＸＸＸ</td>
     </tr>
+    <tr>
+      <td>チームチーくん</td>
+      <td><a href="./makofriend/X_89REN89_X.jpg">X_89REN89_X</a></td>
+      <td><a href="./makofriend/ナカチ.jpg">ナカチ</a></td>
+      <td><a href="./makofriend/わたこ.jpg">わたこ</a></td>
+      <td>ＸＸＸ</td>
     </tr>
-    <tr style="border:none;">
-      <td style="border:none;"><a href="./makofriend/はやと.jpg">はやと</a></td>
-      <td style="border:none;"><a href="./makofriend/MINTIA.jpg">MINTIA</a></td>
+    <tr>
+      <td>おくむ同僚</td>
+      <td><a href="./okmfriend/kureson.jpg">kureson</a></td>
+      <td><a href="./okmfriend/sukepiyo.jpg">sukepiyo</a></td>
+      <td><a href="./okmfriend/KeNchaso.jpg">KeNchaso</a></td>
+      <td>ＸＸＸ</td>
     </tr>
-    <tr style="border:none;">
-      <td style="border:none;"><a href="./makofriend/Ryuuji.jpg">Ryuuji</a></td>
-      <td style="border:none;"><a href="./makofriend/あんこ.jpg">あんこ</a></td>
+    <tr>
+      <td>お魚咥えたネコタロス</td>
+      <td><a href="./yutanfriend/グチタロス.jpg">グチタロス</a></td>
+      <td><a href="./yutanfriend/すし.jpg">すし</a></td>
+      <td><a href="./yutanfriend/nekomon.jpg">nekomon</a></td>
+      <td>ＸＸＸ</td>
     </tr>
-    <tr style="border:none;">
-      <td style="border:none;"><a href="./makofriend/カズマ.jpg">カズマ</a></td>
-      <td style="border:none;"><a href="./makofriend/なる.jpg">なる</a></td>
+    <tr>
+      <td>スナックゆみこ</td>
+      <td><a href="./yutanfriend/ゆみこママ.jpg">ゆみこママ</a></td>
+      <td><a href="./yutanfriend/タイリョクガー・ロー.jpg">タイリョクガー・ロー</a></td>
+      <td><a href="./yutanfriend/NJ.jpg">NJ</a></td>
+      <td>ＸＸＸ</td>
+    </tr>
+    <tr>
+      <td>滑りこみ隊</td>
+      <td><a href="./yutanfriend/alfort bourbon.jpg">alfort bourbon</a></td>
+      <td><a href="./yutanfriend/すいかのたね.jpg">すいかのたね</a></td>
+      <td><a href="./yutanfriend/マクレーン.jpg">マクレーン</a></td>
+      <td>ＸＸＸ</td>
+    </tr>
+    <tr>
+      <td>しん・かきら(仮)</td>
+      <td><a href="./yutanfriend/しんにぃ.jpg">しんにぃ</a></td>
+      <td><a href="./yutanfriend/AKR.jpg">AKR</a></td>
+      <td><a href="./yutanfriend/カブ.jpg">カブ</a></td>
+      <td>ＸＸＸ</td>
     </tr>
   </tbody>
 </table>
