--- a/introductionCard/index.html
+++ b/introductionCard/index.html
@@ -12,101 +12,100 @@
   <tbody>
     <tr>
       <td>ちゅよちゅよＡ</td>
-      <td><a href="./taiwan/アリゼー.jpg">アリゼー</a></td>
-      <td><a href="./taiwan/おくみ.jpg">おくみ</a></td>
-      <td><a href="./taiwan/Sinonkun.jpg">Sinonkun</a></td>
+      <td><a href="./taiwan/アリゼー.jpg">アリゼー<br>
+          <a href="./taiwan/おくみ.jpg">おくみ</a><br>
+          <a href="./taiwan/Sinonkun.jpg">Sinonkun</a><br></td>
       <td>ランドスライド</td>
     </tr>
     <tr>
       <td>ちゅよちゅよＢ</td>
-      <td><a href="./taiwan/miu_turn.jpg">miu_turn</a></td>
-      <td><a href="./taiwan/ahiru.jpg">ahiru</a></td>
-      <td><a href="./taiwan/Tigermask.jpg">Tigermask</a></td>
+      <td><a href="./taiwan/miu_turn.jpg">miu_turn</a><br>
+          <a href="./taiwan/ahiru.jpg">ahiru</a><br>
+          <a href="./taiwan/Tigermask.jpg">Tigermask</a><br></td>
       <td>ツリー</td>
     </tr>
     <tr>
       <td>ちゅよちゅよＣ</td>
-      <td><a href="./taiwan/鉄砲パキュンパキュン.jpg">てっぽーパキュンパキュン</a></td>
-      <td><a href="./taiwan/OkmletEvergarden.png">OkmletEvergarden</a></td>
-      <td>-</td>
+      <td><a href="./taiwan/鉄砲パキュンパキュン.jpg">てっぽーパキュンパキュン</a><br>
+          <a href="./taiwan/OkmletEvergarden.png">OkmletEvergarden</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
     <tr>
       <td>チームポワソン</td>
-      <td><a href="./makofriend/ぽわそん.jpg">ぽわそん</a></td>
-      <td><a href="./makofriend/はやと.jpg">はやと</a></td>
-      <td><a href="./makofriend/ひびき.jpg">ひびき</a></td>
+      <td><a href="./makofriend/ぽわそん.jpg">ぽわそん</a><br>
+          <a href="./makofriend/はやと.jpg">はやと</a><br>
+          <a href="./makofriend/ひびき.jpg">ひびき</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
     <tr>
       <td>チームサクサク</td>
-      <td><a href="./makofriend/さくさくパンダ.jpg">さくさくパンダ</a></td>
-      <td><a href="./makofriend/すずき.jpg">すずき</a></td>
-      <td><a href="./makofriend/キムラ.jpg">キムラ</a></td>
+      <td><a href="./makofriend/さくさくパンダ.jpg">さくさくパンダ</a><br>
+          <a href="./makofriend/すずき.jpg">すずき</a><br>
+          <a href="./makofriend/キムラ.jpg">キムラ</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
     <tr>
       <td>チームあんこ</td>
-      <td><a href="./makofriend/あんこ.jpg">あんこ</a></td>
-      <td><a href="./makofriend/なる.jpg">なる</a></td>
-      <td><a href="./makofriend/Ryuuji.jpg">Ryuuji</a></td>
+      <td><a href="./makofriend/あんこ.jpg">あんこ</a><br>
+          <a href="./makofriend/なる.jpg">なる</a><br>
+          <a href="./makofriend/Ryuuji.jpg">Ryuuji</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
     <tr>
       <td>チームイナズマ</td>
-      <td><a href="./taiwan/inazuma-zipang.jpg">inazuma-zipang</a></td>
-      <td><a href="./makofriend/タナカ.jpg">タナカ</a></td>
-      <td><a href="./makofriend/カズマ.jpg">カズマ</a></td>
+      <td><a href="./taiwan/inazuma-zipang.jpg">inazuma-zipang</a><br>
+          <a href="./makofriend/タナカ.jpg">タナカ</a><br>
+          <a href="./makofriend/カズマ.jpg">カズマ</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
     </tr>
     <tr>
       <td>郵遊白書</td>
-      <td><a href="./makofriend/MINTIA.jpg">MINTIA</a></td>
-      <td>ＸＸＸ</td>
-      <td>ＸＸＸ</td>
+      <td><a href="./makofriend/MINTIA.jpg">MINTIA</a><br>
+          ＸＸＸ<br>
+          ＸＸＸ<br></td>
       <td>ＸＸＸ</td>
     </tr>
     <tr>
       <td>チームチーくん</td>
-      <td><a href="./makofriend/X_89REN89_X.jpg">X_89REN89_X</a></td>
-      <td><a href="./makofriend/ナカチ.jpg">ナカチ</a></td>
-      <td><a href="./makofriend/わたこ.jpg">わたこ</a></td>
+      <td><a href="./makofriend/X_89REN89_X.jpg">X_89REN89_X</a><br>
+          <a href="./makofriend/ナカチ.jpg">ナカチ</a><br>
+          <a href="./makofriend/わたこ.jpg">わたこ</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
     <tr>
       <td>おくむ同僚</td>
-      <td><a href="./okmfriend/kureson.jpg">kureson</a></td>
-      <td><a href="./okmfriend/sukepiyo.jpg">sukepiyo</a></td>
-      <td><a href="./okmfriend/KeNchaso.jpg">KeNchaso</a></td>
+      <td><a href="./okmfriend/kureson.jpg">kureson</a><br>
+          <a href="./okmfriend/sukepiyo.jpg">sukepiyo</a><br>
+          <a href="./okmfriend/KeNchaso.jpg">KeNchaso</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
     <tr>
       <td>お魚咥えたネコタロス</td>
-      <td><a href="./yutanfriend/グチタロス.jpg">グチタロス</a></td>
-      <td><a href="./yutanfriend/すし.jpg">すし</a></td>
-      <td><a href="./yutanfriend/nekomon.jpg">nekomon</a></td>
+      <td><a href="./yutanfriend/グチタロス.jpg">グチタロス</a><br>
+          <a href="./yutanfriend/すし.jpg">すし</a><br>
+          <a href="./yutanfriend/nekomon.jpg">nekomon</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
     <tr>
       <td>スナックゆみこ</td>
-      <td><a href="./yutanfriend/ゆみこママ.jpg">ゆみこママ</a></td>
-      <td><a href="./yutanfriend/タイリョクガー・ロー.jpg">タイリョクガー・ロー</a></td>
-      <td><a href="./yutanfriend/NJ.jpg">NJ</a></td>
+      <td><a href="./yutanfriend/ゆみこママ.jpg">ゆみこママ</a><br>
+          <a href="./yutanfriend/タイリョクガー・ロー.jpg">タイリョクガー・ロー</a><br>
+          <a href="./yutanfriend/NJ.jpg">NJ</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
     <tr>
       <td>滑りこみ隊</td>
-      <td><a href="./yutanfriend/alfort bourbon.jpg">alfort bourbon</a></td>
-      <td><a href="./yutanfriend/すいかのたね.jpg">すいかのたね</a></td>
-      <td><a href="./yutanfriend/マクレーン.jpg">マクレーン</a></td>
+      <td><a href="./yutanfriend/alfort bourbon.jpg">alfort bourbon</a><br>
+          <a href="./yutanfriend/すいかのたね.jpg">すいかのたね</a><br>
+          <a href="./yutanfriend/マクレーン.jpg">マクレーン</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
     <tr>
       <td>しん・かきら(仮)</td>
-      <td><a href="./yutanfriend/しんにぃ.jpg">しんにぃ</a></td>
-      <td><a href="./yutanfriend/AKR.jpg">AKR</a></td>
-      <td><a href="./yutanfriend/カブ.jpg">カブ</a></td>
+      <td><a href="./yutanfriend/しんにぃ.jpg">しんにぃ</a><br>
+          <a href="./yutanfriend/AKR.jpg">AKR</a><br>
+          <a href="./yutanfriend/カブ.jpg">カブ</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
   </tbody>
