--- a/introductionCard/index.html
+++ b/introductionCard/index.html
@@ -6,18 +6,30 @@
 	<title>APEX CUSTOM</title>
 </head>
 <h1 id="firstHeading" class="firstHeading mw-first-heading">APEX CUSTOM 2023/2/4<br></h1>
-
 <body>
+■結果一覧・ポイントルール<br>
+<a href="https://docs.google.com/spreadsheets/d/1e5ENTO9MKNTluIO00YWd_O6z1i104BU3SewWSBJ4EV8/edit?usp=sharing">スプレッドシート</a><br><br>
+■チーム編成<br>
 <table rules="all" cellSpacing="10">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>チーム名</th>
+      <th>メンバ</th>
+      <th>ランドマーク</th>
+    </tr>
+  </thead>
   <tbody>
     <tr>
+      <td></td>
       <td>ちゅよちゅよＡ</td>
-      <td><a href="./taiwan/アリゼー.jpg">アリゼー<br>
+      <td><a href="./taiwan/アリゼー.jpg">アリゼー</a><br>
           <a href="./taiwan/おくみ.jpg">おくみ</a><br>
           <a href="./taiwan/Sinonkun.jpg">Sinonkun</a><br></td>
       <td>ランドスライド</td>
     </tr>
     <tr>
+      <td></td>
       <td>ちゅよちゅよＢ</td>
       <td><a href="./taiwan/miu_turn.jpg">miu_turn</a><br>
           <a href="./taiwan/ahiru.jpg">ahiru</a><br>
@@ -25,12 +37,14 @@
       <td>ツリー</td>
     </tr>
     <tr>
+      <td></td>
       <td>ちゅよちゅよＣ</td>
       <td><a href="./taiwan/鉄砲パキュンパキュン.jpg">てっぽーパキュンパキュン</a><br>
           <a href="./taiwan/OkmletEvergarden.png">OkmletEvergarden</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
     <tr>
+      <td></td>
       <td>チームポワソン</td>
       <td><a href="./makofriend/ぽわそん.jpg">ぽわそん</a><br>
           <a href="./makofriend/はやと.jpg">はやと</a><br>
@@ -38,6 +52,7 @@
       <td>ＸＸＸ</td>
     </tr>
     <tr>
+      <td></td>
       <td>チームサクサク</td>
       <td><a href="./makofriend/さくさくパンダ.jpg">さくさくパンダ</a><br>
           <a href="./makofriend/すずき.jpg">すずき</a><br>
@@ -45,6 +60,7 @@
       <td>ＸＸＸ</td>
     </tr>
     <tr>
+      <td></td>
       <td>チームあんこ</td>
       <td><a href="./makofriend/あんこ.jpg">あんこ</a><br>
           <a href="./makofriend/なる.jpg">なる</a><br>
@@ -52,6 +68,7 @@
       <td>ＸＸＸ</td>
     </tr>
     <tr>
+      <td></td>
       <td>チームイナズマ</td>
       <td><a href="./taiwan/inazuma-zipang.jpg">inazuma-zipang</a><br>
           <a href="./makofriend/タナカ.jpg">タナカ</a><br>
@@ -60,6 +77,7 @@
     </tr>
     </tr>
     <tr>
+      <td></td>
       <td>郵遊白書</td>
       <td><a href="./makofriend/MINTIA.jpg">MINTIA</a><br>
           ＸＸＸ<br>
@@ -67,6 +85,7 @@
       <td>ＸＸＸ</td>
     </tr>
     <tr>
+      <td></td>
       <td>チームチーくん</td>
       <td><a href="./makofriend/X_89REN89_X.jpg">X_89REN89_X</a><br>
           <a href="./makofriend/ナカチ.jpg">ナカチ</a><br>
@@ -74,6 +93,7 @@
       <td>ＸＸＸ</td>
     </tr>
     <tr>
+      <td></td>
       <td>おくむ同僚</td>
       <td><a href="./okmfriend/kureson.jpg">kureson</a><br>
           <a href="./okmfriend/sukepiyo.jpg">sukepiyo</a><br>
@@ -81,6 +101,7 @@
       <td>ＸＸＸ</td>
     </tr>
     <tr>
+      <td></td>
       <td>お魚咥えたネコタロス</td>
       <td><a href="./yutanfriend/グチタロス.jpg">グチタロス</a><br>
           <a href="./yutanfriend/すし.jpg">すし</a><br>
@@ -88,6 +109,7 @@
       <td>ＸＸＸ</td>
     </tr>
     <tr>
+      <td></td>
       <td>スナックゆみこ</td>
       <td><a href="./yutanfriend/ゆみこママ.jpg">ゆみこママ</a><br>
           <a href="./yutanfriend/タイリョクガー・ロー.jpg">タイリョクガー・ロー</a><br>
@@ -95,6 +117,7 @@
       <td>ＸＸＸ</td>
     </tr>
     <tr>
+      <td></td>
       <td>滑りこみ隊</td>
       <td><a href="./yutanfriend/alfort bourbon.jpg">alfort bourbon</a><br>
           <a href="./yutanfriend/すいかのたね.jpg">すいかのたね</a><br>
@@ -102,14 +125,29 @@
       <td>ＸＸＸ</td>
     </tr>
     <tr>
+      <td></td>
       <td>しん・かきら(仮)</td>
       <td><a href="./yutanfriend/しんにぃ.jpg">しんにぃ</a><br>
           <a href="./yutanfriend/AKR.jpg">AKR</a><br>
           <a href="./yutanfriend/カブ.jpg">カブ</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
-  </tbody>
+    <tr>
+      <td></td>
+      <td>チーム名決まってなしチーム（仮）</td>
+      <td><a href="./yutanfriend/えあでーる.jpg">えあでーる</a><br>
+          <a href="./yutanfriend/shaku.jpg">shaku</a><br>
+          <a href="./yutanfriend/とも.jpg">とも</a><br></td>
+      <td>ＸＸＸ</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Thousand Gold Wisteria</td>
+      <td><a href="./yutanfriend/HARUMAQI.jpg">HARUMAQI</a><br>
+          <a href="./yutanfriend/*****.jpg">*****</a><br>
+          <a href="./yutanfriend/*****.jpg">*****</a><br></td>
+      <td>ＸＸＸ</td>
+    </tr>  </tbody>
 </table>
-
 </body>
 </html>
