自己紹介カード編集

--- a/introductionCard/index.html
+++ b/introductionCard/index.html
@@ -23,7 +23,7 @@
     <tr>
       <td></td>
       <td>ちゅよちゅよＡ</td>
-      <td><a href="./taiwan/アリゼー.jpg">アリゼー</a><br>
+      <td><a href="./taiwan/miu_turn.jpg">miu_turn</a><br>
           <a href="./taiwan/おくみ.jpg">おくみ</a><br>
           <a href="./taiwan/Sinonkun.jpg">Sinonkun</a><br></td>
       <td>ランドスライド</td>
@@ -31,7 +31,7 @@
     <tr>
       <td></td>
       <td>ちゅよちゅよＢ</td>
-      <td><a href="./taiwan/miu_turn.jpg">miu_turn</a><br>
+      <td><a href="./taiwan/アリゼー.jpg">アリゼー</a><br>
           <a href="./taiwan/ahiru.jpg">ahiru</a><br>
           <a href="./taiwan/Tigermask.jpg">Tigermask</a><br></td>
       <td>ツリー</td>
@@ -40,7 +40,7 @@
       <td></td>
       <td>ちゅよちゅよＣ</td>
       <td><a href="./taiwan/鉄砲パキュンパキュン.jpg">てっぽーパキュンパキュン</a><br>
-          <a href="./taiwan/OkmletEvergarden.png">OkmletEvergarden</a><br></td>
+          <a href="./taiwan/OkmletEvergarden.png">OkmletEvergarden</a><br><br></td>
       <td>ＸＸＸ</td>
     </tr>
     <tr>
@@ -71,8 +71,8 @@
       <td></td>
       <td>チームイナズマ</td>
       <td><a href="./taiwan/inazuma-zipang.jpg">inazuma-zipang</a><br>
-          <a href="./makofriend/タナカ.jpg">タナカ</a><br>
-          <a href="./makofriend/カズマ.jpg">カズマ</a><br></td>
+          <a href="./makofriend/*****.jpg">*****</a><br>
+          <a href="./makofriend/*****.jpg">*****</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
     </tr>
@@ -80,8 +80,8 @@
       <td></td>
       <td>郵遊白書</td>
       <td><a href="./makofriend/MINTIA.jpg">MINTIA</a><br>
-          ＸＸＸ<br>
-          ＸＸＸ<br></td>
+          <a href="./makofriend/タナカ.jpg">タナカ</a><br>
+          <a href="./makofriend/カズマ.jpg">カズマ</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
     <tr>
@@ -94,7 +94,7 @@
     </tr>
     <tr>
       <td></td>
-      <td>おくむ同僚</td>
+      <td>スケソンズ</td>
       <td><a href="./okmfriend/kureson.jpg">kureson</a><br>
           <a href="./okmfriend/sukepiyo.jpg">sukepiyo</a><br>
           <a href="./okmfriend/KeNchaso.jpg">KeNchaso</a><br></td>
@@ -134,7 +134,7 @@
     </tr>
     <tr>
       <td></td>
-      <td>チーム名決まってなしチーム（仮）</td>
+      <td>11種類のスパイス</td>
       <td><a href="./yutanfriend/えあでーる.jpg">えあでーる</a><br>
           <a href="./yutanfriend/shaku.jpg">shaku</a><br>
           <a href="./yutanfriend/とも.jpg">とも</a><br></td>
@@ -147,7 +147,8 @@
           <a href="./yutanfriend/*****.jpg">*****</a><br>
           <a href="./yutanfriend/*****.jpg">*****</a><br></td>
       <td>ＸＸＸ</td>
-    </tr>  </tbody>
+    </tr>
+  </tbody>
 </table>
 </body>
 </html>
