自己紹介カード編集

--- a/introductionCard/index.html
+++ b/introductionCard/index.html
@@ -86,6 +86,14 @@
     </tr>
     <tr>
       <td></td>
+      <td>チームマップロシいさら</td>
+      <td><a href="./makofriend/ロッシ.jpg">ロッシ</a><br>
+          <a href="./makofriend/マップ.jpg">マップ</a><br>
+          <a href="./makofriend/いさら.jpg">いさら</a><br></td>
+      <td>ＸＸＸ</td>
+    </tr>
+    <tr>
+      <td></td>
       <td>チームチーくん</td>
       <td><a href="./makofriend/X_89REN89_X.jpg">X_89REN89_X</a><br>
           <a href="./makofriend/ナカチ.jpg">ナカチ</a><br>
@@ -144,8 +152,8 @@
       <td></td>
       <td>Thousand Gold Wisteria</td>
       <td><a href="./yutanfriend/HARUMAQI.jpg">HARUMAQI</a><br>
-          <a href="./yutanfriend/*****.jpg">*****</a><br>
-          <a href="./yutanfriend/*****.jpg">*****</a><br></td>
+          <a href="./yutanfriend/ねこ.jpg">ねこ</a><br>
+          <a href="./yutanfriend/Hudson Hornet.jpg">Hudson Hornet</a><br></td>
       <td>ＸＸＸ</td>
     </tr>
   </tbody>
