自己紹介カード編集

--- a/introductionCard/index.html
+++ b/introductionCard/index.html
@@ -26,7 +26,7 @@
       <td><a href="./taiwan/miu_turn.jpg">miu_turn</a><br>
           <a href="./taiwan/おくみ.jpg">おくみ</a><br>
           <a href="./taiwan/Sinonkun.jpg">Sinonkun</a><br></td>
-      <td>ランドスライド</td>
+      <td>ラバサイフォン</td>
     </tr>
     <tr>
       <td></td>
@@ -34,14 +34,14 @@
       <td><a href="./taiwan/アリゼー.jpg">アリゼー</a><br>
           <a href="./taiwan/ahiru.jpg">ahiru</a><br>
           <a href="./taiwan/Tigermask.jpg">Tigermask</a><br></td>
-      <td>ツリー</td>
+      <td>カウントダウン</td>
     </tr>
     <tr>
       <td></td>
       <td>ちゅよちゅよＣ</td>
       <td><a href="./taiwan/鉄砲パキュンパキュン.jpg">てっぽーパキュンパキュン</a><br>
           <a href="./taiwan/OkmletEvergarden.png">OkmletEvergarden</a><br><br></td>
-      <td>ＸＸＸ</td>
+      <td>発射場</td>
     </tr>
     <tr>
       <td></td>
@@ -49,7 +49,7 @@
       <td><a href="./makofriend/ぽわそん.jpg">ぽわそん</a><br>
           <a href="./makofriend/はやと.jpg">はやと</a><br>
           <a href="./makofriend/ひびき.jpg">ひびき</a><br></td>
-      <td>ＸＸＸ</td>
+      <td>試練</td>
     </tr>
     <tr>
       <td></td>
@@ -57,7 +57,7 @@
       <td><a href="./makofriend/さくさくパンダ.jpg">さくさくパンダ</a><br>
           <a href="./makofriend/すずき.jpg">すずき</a><br>
           <a href="./makofriend/キムラ.jpg">キムラ</a><br></td>
-      <td>ＸＸＸ</td>
+      <td>展望/間欠泉</td>
     </tr>
     <tr>
       <td></td>
@@ -65,7 +65,7 @@
       <td><a href="./makofriend/あんこ.jpg">あんこ</a><br>
           <a href="./makofriend/なる.jpg">なる</a><br>
           <a href="./makofriend/Ryuuji.jpg">Ryuuji</a><br></td>
-      <td>ＸＸＸ</td>
+      <td>ラバシティ/ビッグモード</td>
     </tr>
     <tr>
       <td></td>
@@ -73,7 +73,7 @@
       <td><a href="./taiwan/inazuma-zipang.jpg">inazuma-zipang</a><br>
           <a href="./makofriend/*****.jpg">*****</a><br>
           <a href="./makofriend/*****.jpg">*****</a><br></td>
-      <td>ＸＸＸ</td>
+      <td>調査キャンプ</td>
     </tr>
     </tr>
     <tr>
@@ -82,7 +82,7 @@
       <td><a href="./makofriend/MINTIA.jpg">MINTIA</a><br>
           <a href="./makofriend/タナカ.jpg">タナカ</a><br>
           <a href="./makofriend/カズマ.jpg">カズマ</a><br></td>
-      <td>ＸＸＸ</td>
+      <td>エピセンター</td>
     </tr>
     <tr>
       <td></td>
@@ -90,7 +90,7 @@
       <td><a href="./makofriend/ロッシ.jpg">ロッシ</a><br>
           <a href="./makofriend/マップ.jpg">マップ</a><br>
           <a href="./makofriend/いさら.jpg">いさら</a><br></td>
-      <td>ＸＸＸ</td>
+      <td>溶岩溝</td>
     </tr>
     <tr>
       <td></td>
@@ -98,7 +98,7 @@
       <td><a href="./makofriend/X_89REN89_X.jpg">X_89REN89_X</a><br>
           <a href="./makofriend/ナカチ.jpg">ナカチ</a><br>
           <a href="./makofriend/わたこ.jpg">わたこ</a><br></td>
-      <td>ＸＸＸ</td>
+      <td>火力発電所</td>
     </tr>
     <tr>
       <td></td>
@@ -106,7 +106,7 @@
       <td><a href="./okmfriend/kureson.jpg">kureson</a><br>
           <a href="./okmfriend/sukepiyo.jpg">sukepiyo</a><br>
           <a href="./okmfriend/KeNchaso.jpg">KeNchaso</a><br></td>
-      <td>ＸＸＸ</td>
+      <td>ドーム</td>
     </tr>
     <tr>
       <td></td>
@@ -114,7 +114,7 @@
       <td><a href="./yutanfriend/グチタロス.jpg">グチタロス</a><br>
           <a href="./yutanfriend/すし.jpg">すし</a><br>
           <a href="./yutanfriend/nekomon.jpg">nekomon</a><br></td>
-      <td>ＸＸＸ</td>
+      <td>ランドスライド/中継地点</td>
     </tr>
     <tr>
       <td></td>
@@ -122,7 +122,7 @@
       <td><a href="./yutanfriend/ゆみこママ.jpg">ゆみこママ</a><br>
           <a href="./yutanfriend/タイリョクガー・ロー.jpg">タイリョクガー・ロー</a><br>
           <a href="./yutanfriend/NJ.jpg">NJ</a><br></td>
-      <td>ＸＸＸ</td>
+      <td>スカイフック</td>
     </tr>
     <tr>
       <td></td>
@@ -130,7 +130,7 @@
       <td><a href="./yutanfriend/alfort bourbon.jpg">alfort bourbon</a><br>
           <a href="./yutanfriend/すいかのたね.jpg">すいかのたね</a><br>
           <a href="./yutanfriend/マクレーン.jpg">マクレーン</a><br></td>
-      <td>ＸＸＸ</td>
+      <td>クリマタイザー</td>
     </tr>
     <tr>
       <td></td>
@@ -138,7 +138,7 @@
       <td><a href="./yutanfriend/しんにぃ.jpg">しんにぃ</a><br>
           <a href="./yutanfriend/AKR.jpg">AKR</a><br>
           <a href="./yutanfriend/カブ.jpg">カブ</a><br></td>
-      <td>ＸＸＸ</td>
+      <td>ハーベスター</td>
     </tr>
     <tr>
       <td></td>
@@ -146,7 +146,7 @@
       <td><a href="./yutanfriend/えあでーる.jpg">えあでーる</a><br>
           <a href="./yutanfriend/shaku.jpg">shaku</a><br>
           <a href="./yutanfriend/とも.jpg">とも</a><br></td>
-      <td>ＸＸＸ</td>
+      <td>ツリー</td>
     </tr>
     <tr>
       <td></td>
@@ -154,7 +154,7 @@
       <td><a href="./yutanfriend/HARUMAQI.jpg">HARUMAQI</a><br>
           <a href="./yutanfriend/ねこ.jpg">ねこ</a><br>
           <a href="./yutanfriend/Hudson Hornet.jpg">Hudson Hornet</a><br></td>
-      <td>ＸＸＸ</td>
+      <td>フラグメント</td>
     </tr>
   </tbody>
 </table>
