自己紹介カード編集

--- a/introductionCard/index.html
+++ b/introductionCard/index.html
@@ -49,7 +49,7 @@
       <td><a href="./makofriend/ぽわそん.jpg">ぽわそん</a><br>
           <a href="./makofriend/はやと.jpg">はやと</a><br>
           <a href="./makofriend/ひびき.jpg">ひびき</a><br></td>
-      <td>試練</td>
+      <td>ランドスライド/中継地点</td>
     </tr>
     <tr>
       <td></td>
@@ -114,7 +114,7 @@
       <td><a href="./yutanfriend/グチタロス.jpg">グチタロス</a><br>
           <a href="./yutanfriend/すし.jpg">すし</a><br>
           <a href="./yutanfriend/nekomon.jpg">nekomon</a><br></td>
-      <td>ランドスライド/中継地点</td>
+      <td>試練</td>
     </tr>
     <tr>
       <td></td>
@@ -154,9 +154,16 @@
       <td><a href="./yutanfriend/HARUMAQI.jpg">HARUMAQI</a><br>
           <a href="./yutanfriend/ねこ.jpg">ねこ</a><br>
           <a href="./yutanfriend/Hudson Hornet.jpg">Hudson Hornet</a><br></td>
-      <td>フラグメント</td>
+      <td>フラグメントイースト</td>
     </tr>
-  </tbody>
+    <tr>
+      <td></td>
+      <td>ユータン追加チーム</td>
+      <td><a href="./yutanfriend/*****.jpg">*****</a><br>
+          <a href="./yutanfriend/*****.jpg">*****</a><br>
+          <a href="./yutanfriend/*****.jpg">*****</a><br></td>
+      <td>フラグメントウエスト</td>
+    </tr>  </tbody>
 </table>
 </body>
 </html>
