自己紹介カード編集

--- a/introductionCard/index.html
+++ b/introductionCard/index.html
@@ -71,8 +71,8 @@
       <td></td>
       <td>チームイナズマ</td>
       <td><a href="./taiwan/inazuma-zipang.jpg">inazuma-zipang</a><br>
-          <a href="./makofriend/*****.jpg">*****</a><br>
-          <a href="./makofriend/*****.jpg">*****</a><br></td>
+          <a href="./makofriend/まさ.jpg">まさ</a><br>
+          <a href="./makofriend/ティー.jpg">ティー</a><br></td>
       <td>調査キャンプ</td>
     </tr>
     </tr>
@@ -158,10 +158,10 @@
     </tr>
     <tr>
       <td></td>
-      <td>ユータン追加チーム</td>
-      <td><a href="./yutanfriend/*****.jpg">*****</a><br>
-          <a href="./yutanfriend/*****.jpg">*****</a><br>
-          <a href="./yutanfriend/*****.jpg">*****</a><br></td>
+      <td>ピクニカルズ</td>
+      <td><a href="./yutanfriend/マサチョフ.jpg">マサチョフ	</a><br>
+          <a href="./yutanfriend/Raina_Heads.jpg">Raina_Heads</a><br>
+          <a href="./yutanfriend/かまちゃん.jpg">かまちゃん</a><br></td>
       <td>フラグメントウエスト</td>
     </tr>  </tbody>
 </table>
