2/18カスタム向け修正

--- a/introductionCard/20230218/index.html
+++ b/introductionCard/20230218/index.html
@@ -39,7 +39,7 @@
     <tr>
       <td></td>
       <td>郵遊白書</td>
-      <td><a href="./makofriend/MINTIA.jpg">MINTIA</a><br>
+      <td><a href="./makofriend/テッチャン.jpg">テッチャン</a><br>
           <a href="./makofriend/タナカ.jpg">タナカ</a><br>
           <a href="./makofriend/カズマ.jpg">カズマ</a><br></td>
       <td>*****</td>
