2/18カスタムに向けた修正

--- a/introductionCard/20230218/index.html
+++ b/introductionCard/20230218/index.html
@@ -44,6 +44,22 @@
           <a href="./makofriend/カズマ.jpg">カズマ</a><br></td>
       <td>*****</td>
     </tr>
+    <tr>
+      <td></td>
+      <td>サクサク</td>
+      <td><a href="./makofriend/さくさくぱんだ.png">さくさくぱんだ</a><br>
+          <a href="./makofriend/すずき.jpg">すずき</a><br>
+          <a href="./makofriend/ナガタニ.jpg">ナガタニ</a><br></td>
+      <td>*****</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>お魚咥えたネコタロス</td>
+      <td><a href="./yutanfriend/グチタロス.png">グチタロス</a><br>
+          <a href="./yutanfriend/nekomon.jpg">nekomon</a><br>
+          <a href="./yutanfriend/すし.jpg">すし</a><br></td>
+      <td>*****</td>
+    </tr>
   </tbody>
 </table>
 </body>
