2/18カスタムに向けた修正

--- a/introductionCard/20230218/index.html
+++ b/introductionCard/20230218/index.html
@@ -60,6 +60,14 @@
           <a href="./yutanfriend/すし.jpg">すし</a><br></td>
       <td>*****</td>
     </tr>
+    <tr>
+      <td></td>
+      <td>りくれ</td>
+      <td><a href="./yukifriend/りょむ.png">りょむ</a><br>
+          <a href="./yukifriend/くらら.jpg">くらら</a><br>
+          <a href="./yukifriend/れい.jpg">れい</a><br></td>
+      <td>*****</td>
+    </tr>
   </tbody>
 </table>
 </body>
