2/18カスタムに向けた修正

--- a/introductionCard/20230218/index.html
+++ b/introductionCard/20230218/index.html
@@ -68,6 +68,70 @@
           <a href="./yukifriend/れい.jpg">れい</a><br></td>
       <td>*****</td>
     </tr>
+    <tr>
+      <td></td>
+      <td>R99愛好家</td>
+      <td><a href="./makofriend/cihiro.png">cihiro</a><br>
+          <a href="./makofriend/sin.jpg">sin</a><br>
+          <a href="./makofriend/watako.jpg">watako</a><br></td>
+      <td>*****</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>JOURNAL STANDARD</td>
+      <td><a href="./makofriend/あんこ.jpg">あんこ</a><br>
+          <a href="./makofriend/まさ.png">まさ</a><br>
+          <a href="./makofriend/inazuma-zipang.png">inazuma-zipang</a><br></td>
+      <td>*****</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>すいかのウィスキー</td>
+      <td><a href="./makofriend/すいかのたね.jpg">すいかのたね</a><br>
+          <a href="./makofriend/マクレーン.jpg">マクレーン</a><br>
+          <a href="./makofriend/ウィスキー.jpg">ウィスキー</a><br></td>
+      <td>*****</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>11種類のスパイス</td>
+      <td><a href="./makofriend/えあでーる.jpg">えあでーる</a><br>
+          <a href="./makofriend/shaku.jpg">shaku</a><br>
+          <a href="./makofriend/とも.jpg">とも</a><br></td>
+      <td>*****</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>TIヨ</td>
+      <td><a href="./makofriend/amagasa_natu.png">amagasa_natu</a><br>
+          <a href="./makofriend/DR-Seto.jpg">DR-Seto</a><br>
+          <a href="./makofriend/SHINO--1014.png">SHINO--1014</a><br></td>
+      <td>*****</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>シマダカワイミミオ</td>
+      <td><a href="./makofriend/シマダ.jpg">シマダ</a><br>
+          <a href="./makofriend/カワイ.jpg">カワイ</a><br>
+          <a href="./makofriend/ミミオ.jpg">ミミオ</a><br></td>
+      <td>*****</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>酔</td>
+      <td><a href="./makofriend/ぽわそん.png">ぽわそん</a><br>
+          <a href="./makofriend/ひびき.jpg">ひびき</a><br>
+          <a href="./makofriend/おおいずみはやと.jpg">おおいずみはやと</a><br></td>
+      <td>*****</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>うにパスタ</td>
+      <td><a href="./makofriend/rossi8jp.png">rossi8jp</a><br>
+          <a href="./makofriend/junk__food-＿-.png">junk__food-＿-</a><br>
+          <a href="./makofriend/kotarou070100.jpg">kotarou070100</a><br></td>
+      <td>*****</td>
+    </tr>
   </tbody>
 </table>
 </body>
