2/18カスタムに向けた修正

--- a/introductionCard/20230218/index.html
+++ b/introductionCard/20230218/index.html
@@ -132,6 +132,14 @@
           <a href="./makofriend/kotarou070100.jpg">kotarou070100</a><br></td>
       <td>*****</td>
     </tr>
+    <tr>
+      <td></td>
+      <td>すなば</td>
+      <td><a href="./makofriend/sathla.png">sathla</a><br>
+          <a href="./makofriend/hrvst4608.png">hrvst4608</a><br>
+          <a href="./makofriend/mogarina.png">mogarina</a><br></td>
+      <td>*****</td>
+    </tr>
   </tbody>
 </table>
 </body>
