2/18カスタムに向けた修正

--- a/introductionCard/20230218/index.html
+++ b/introductionCard/20230218/index.html
@@ -57,7 +57,7 @@
       <td>お魚咥えたネコタロス</td>
       <td><a href="./yutanfriend/グチタロス.png">グチタロス</a><br>
           <a href="./yutanfriend/nekomon.jpg">nekomon</a><br>
-          <a href="./yutanfriend/すし.jpg">すし</a><br></td>
+          <a href="./yutanfriend/Raina_Heads.jpg">Raina_Heads</a><br></td>
       <td>*****</td>
     </tr>
     <tr>
