3/20カスタムに向けた修正

--- a/introductionCard/20230320/index.html
+++ b/introductionCard/20230320/index.html
@@ -26,7 +26,7 @@
       <td><a href="./taiwan/鉄砲パキュンパキュン.jpg">てっぽーパキュンパキュン</a><br>
           <a href="./taiwan/おくみ.jpg">おくみ</a><br>
           <a href="./taiwan/ahiru.jpg">ahiru</a><br></td>
-      <td>火力発電所</td>
+      <td>フラグメント</td>
       <td></td>
     </tr>
       <td></td>
@@ -65,7 +65,7 @@
       <td>郵☆遊☆白書</td>
       <td><a href="./etc/タナカ.png">タナカ</a><br>
           <a href="./etc/テッチャン.jpg">テッチャン</a><br>
-          <a href="./etc/カズマ.jpg">カズマ</a><br></td>
+          <a href="./taiwan/inazuma-zipang.jpg">inazuma-zipang</a><br></td>
       <td>発射場</td>
     </tr>
     </tr>
@@ -110,11 +110,11 @@
     </tr>
     </tr>
       <td></td>
-      <td>XXX</td>
-      <td><a href="./etc/XXX.png">XXX</a><br>
-          <a href="./etc/XXX.jpg">XXX</a><br>
-          <a href="./etc/XXX.jpg">XXX</a><br></td>
-      <td>*****</td>
+      <td>チームあんこ</td>
+      <td><a href="./etc/グチタロス.png">グチタロス</a><br>
+          <a href="./etc/あんこ.png">あんこ</a><br>
+          <a href="./etc/Ryuuji.jpg">Ryuuji</a><br></td>
+      <td>中継地点</td>
     </tr>
   </tbody>
 </table>
